--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ pygments: true
 title : Sense It!
 tagline: ... or make sense!
 author :
-  name : Name Lastname
+  name : Maltretieren
   email : blah@email.test
   github : username
   twitter : username
