--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Sense It!
+title : Place to pee free!
 tagline: ... or make sense!
 author :
   name : Maltrtieren
