{% include JB/comments %}

--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : Place to pee free!
-tagline: ... or make sense!
+tagline: ... or be free
 author :
-  name : Maltrtieren
+  name : Maltretieren
   email : blah@email.test
   github : username
   twitter : username
