--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,7 @@ JB :
   #
   archive_path: /archive.html
   categories_path : /categories.html
+  raspi_path: /table.html
   tags_path : /tags.html
   atom_path : /atom.xml
   rss_path : /rss.xml
