--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ author :
 production_url : https://maltretieren.github.io
 # redirect users to the https version of the website. Do not include protocol, just the domain. 
 # but: only check when on the production domain, as set in _config.yml.
-enforce_ssl: maltretieren.github.io
+# If it is empty there is no redirect to https
+enforce_ssl: 
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
