Updated config.js from GUI

--- a/app/js/config.json
+++ b/app/js/config.json
@@ -1,1 +1,1 @@
-{"keenio":{"comments_url":"comments_url","projectId":"projectId","writeKey":"writeKey","readKey":"readKey"},"github":{"client_id":"client_id","redirection_url":"redirection_url","authorization":"authorization"},"heroku":{"authenticate":"authenticate"}}
+{"keenio":{"comments_url":"comments_url","projectId":"projectId","writeKey":"writeKey","readKey":"readKey"},"github":{"client_id":"client_id","redirection_url":"redirection_url","authorization":"authorization"},"heroku":{"authenticate":"testtttttt"}}
