--- a/package.json
+++ b/package.json
@@ -3,4 +3,10 @@
     "version": "0.0.9",
     "author": "Maltretieren",
     "description": "A GitHub Blog ready to clone..."
+    "devDependencies": {
+        "grunt": "~0.4.2",
+        "grunt-contrib-jshint": "~0.6.3",
+        "grunt-contrib-nodeunit": "~0.2.0",
+        "grunt-contrib-uglify": "~0.2.2"
+    }
 }
