--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-    "name": "GittiHubbi",
-    "version": "0.0.9",
-    "author": "Maltretieren",
-    "description": "A GitHub Blog ready to clone..."
-    "devDependencies": {
-        "grunt": "~0.4.2",
-        "grunt-contrib-jshint": "~0.6.3",
-        "grunt-contrib-nodeunit": "~0.2.0",
-        "grunt-contrib-uglify": "~0.2.2"
-    }
+  "name": "my-project-name",
+  "version": "0.1.0",
+  "devDependencies": {
+    "grunt": "~0.4.4",
+    "grunt-contrib-jshint": "~0.6.3",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-uglify": "~0.2.2"
+  }
 }
