--- a/app/js/config.json
+++ b/app/js/config.json
@@ -1,18 +1,18 @@
 {
     keenio: {
-        comments_url: 'comments_url',
-        projectId: 'hggg',
-        writeKey: 'writeKey',
-        readKey: 'read'
+        'comments_url': 'comments_url',
+        'projectId': 'hggg',
+        'writeKey': 'writeKey',
+        'readKey': 'read'
     },
     github: {
-        user: 'Maltretieren',
-        repository: 'maltretieren.github.com',
-        client_id: 'client_id',
-        redirection_url: 'redirection_url',
-        authorization: 'test'
+        'user': 'Maltretieren',
+        'repository': 'maltretieren.github.com',
+        'client_id': 'client_id',
+        'redirection_url': 'redirection_url',
+        'authorization': 'test'
     },
     heroku: {
-        authenticate: 'test'
+        'authenticate': 'test'
     }
 }
