--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ enforce_ssl: maltretieren.github.io
 #
 JB :
   version : 0.3.0
-  theme : lumen
+  theme : angularui
 
   # All links will be namespaced by BASE_PATH if defined.
   # Links in your website should always be prefixed with {{BASE_PATH}}
