--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,10 @@
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-pygments: true
+highlighter: true
 
-# Markdown interpreter - Maruku is not maintained any more...
+# Markdown interpreter - Maruku is not maintained any more... Since version 2.2.0
+# this is the default interpreter https://github.com/blog/1867-github-pages-now-runs-jekyll-2-2-0
 markdown: kramdown
 
 # Themes are encouraged to use these universal variables 
