--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,9 @@ author :
   twitter : username
   feedburner : feedname
 
+gem:
+  emoji
+
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
