--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,9 @@ author :
   twitter : username
   feedburner : feedname
 
-# Serve emoji locally - https://github.com/jekyll/jemoji
+# Serve emoji locally -
+# https://github.com/jekyll/jemoji
+# https://help.github.com/articles/emoji-on-github-pages/
 gem:
   jemoji
 
