--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ markdown: kramdown
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Place to pee free!
+title : <img src='http://www.hopscotchonline.org/Game1/colors/rainbow.png'>
 tagline: ... or be free
 author :
   name : Maltretieren
