--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "maltretieren",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-git": "~0.2.6",
-    "karma": "~0.12.0",
-    "grunt-karma": "~0.8.3",
-    "karma-jasmine": "~0.1.0",
-    "karma-chrome-launcher": "~0.1",
-    "karma-ng-html2js-preprocessor": "~0.1.0",
-    "karma-ng-scenario": "~0.1.0"
+      "grunt": "~0.4.0",
+      "phantomjs": "~1.9.1-0",
+      "grunt-karma": "~0.5",
+      "karma": "~0.9",
+      "karma-chrome-launcher": "0.0.2",
+      "karma-script-launcher": "0.0.1",
+      "karma-firefox-launcher": "0.0.2",
+      "karma-jasmine": "0.0.1",
+      "karma-requirejs": "0.0.1",
+      "karma-phantomjs-launcher": "0.0.2"
   },
   "repository": {
     "type": "git",
