--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "maltretieren",
   "version": "0.1.0",
+  "scripts": {
+      a"test": "grunt test"
+  },
   "devDependencies": {
       "grunt": "~0.4.0",
       "phantomjs": "~1.9.1-0",
