--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
       "karma-firefox-launcher": "0.1.3",
       "karma-jasmine": "0.1.5",
       "karma-requirejs": "0.2.2",
-      "karma-phantomjs-launcher": "0.1.4"
+      "karma-phantomjs-launcher": "0.1.4",
+      "grunt-contrib-watch": "0.6.1"
   },
   "repository": {
     "type": "git",
