--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
       "karma-jasmine": "0.1.5",
       "karma-requirejs": "0.2.2",
       "karma-phantomjs-launcher": "0.1.4",
-      "grunt-contrib-watch": "0.6.1"
+      "grunt-contrib-watch": "0.6.1",
+	  "karma-junit-reporter": "0.2.2"
   },
   "repository": {
     "type": "git",
